--- a/joao.Rmd
+++ b/joao.Rmd
@@ -3,6 +3,15 @@ title: "joao"
 output: github_document
 ---
 
+```{r readme-setup, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "figures/"
+)
+is_online = curl::has_internet()
+```
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
