--- a/joao.Rmd
+++ b/joao.Rmd
@@ -21,7 +21,9 @@ knitr::opts_chunk$set(
 
 ## Overview 1
 
-$$ x^2== y + \frac{x}{y} $$
+ \begin{equation}
+ x^2== y + \frac{x}{y} 
+ \end{equation}
 
 ## Overview
 
