--- a/joao.Rmd
+++ b/joao.Rmd
@@ -21,9 +21,9 @@ knitr::opts_chunk$set(
 
 ## Overview 1
 
- \begin{equation}
- x^2== y + \frac{x}{y} 
- \end{equation}
+$$
+Speed_N = Speed_0 = \overline{Speed} = \frac{S_N-S_1}{t_N-t_1}
+$$
 
 ## Overview
 
