--- a/joao.Rmd
+++ b/joao.Rmd
@@ -20,7 +20,10 @@ knitr::opts_chunk$set(
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/ggplot2)](https://cran.r-project.org/package=ggplot2)
 
 ## Overview 1
-
+lala
+\begin{equation}
+Speed_N = Speed_0 = \overline{Speed} = \frac{S_N-S_1}{t_N-t_1}
+\end{equation}
 $$
 Speed_N = Speed_0 = \overline{Speed} = \frac{S_N-S_1}{t_N-t_1}
 $$
