--- a/untitled.Rmd
+++ b/untitled.Rmd
@@ -126,7 +126,9 @@ For a given trip, the function `gtfs2gps` calculates the average speed between e
 $$
 Speed_i = \frac{S_{i+1}-S_i}{t_{i+1}-t_i}.
 $$
-<img src="https://latex.codecogs.com/svg.latex?\Large&space;Speed_i = \frac{S_{i+1}-S_i}{t_{i+1}-t_i}" title="\Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}" />
+<img src="https://latex.codecogs.com/svg.latex?\Large&space;x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}" title="\Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}" />
+
+<img src="https://latex.codecogs.com/svg.latex?\Large&space;Speed_i = \frac{S_{i+1}-S_i}{t_{i+1}-t_i}" title="\Large Speed_i = \frac{S_{i+1}-S_i}{t_{i+1}-t_i}" />
 
 Since the beginning of each trip usually starts before the first stop_id, the mean speed cannot be calculated as shown in the previous equation because information on $i$ period does not exist. In this case, the function consider the mean speed for the whole trip. It also happens after the last valid stop_id ($N$) of the trips, where info on $i+1$ also does not exist. 
 
