--- a/untitled.Rmd
+++ b/untitled.Rmd
@@ -109,7 +109,7 @@ To convert GTFS to GPS-like format, use `gtfs2gps()`. This is the core function 
 
 The function `gtfs2gps()` automatically recognises whether the GTFS data brings detailed `stop_times.txt` information or whether it is a `frequency.txt` GTFS file. A sample data of a GTFS with detailed  `stop_times.txt` cab be found below:
 
-```{r}
+```{r poa}
 poa <- system.file("extdata/poa.zip", package="gtfs2gps")
 poa_gps <- gtfs2gps(poa, progress = FALSE)
 poa_gps_sf <- gps_as_sf(poa_gps)
@@ -131,9 +131,6 @@ Since the beginning of each trip usually starts before the first stop_id, the me
 $$
 Speed_N = Speed_0 = \overline{Speed} = \frac{S_N-S_1}{t_N-t_1}
 $$
-\begin{equation}
-Speed_N = Speed_0 = \overline{Speed} = \frac{S_N-S_1}{t_N-t_1}
-\end{equation}
 
 ![alt text](https://github.com/ipeaGIT/gtfs2gps/blob/master/vignettes/speed.png "Logo Title Text 1")
 
