--- a/untitled.Rmd
+++ b/untitled.Rmd
@@ -1,7 +1,6 @@
 ---
 title: 'gtfs2gps: Converting GTFS data to GPS-like format'
 author: "Rafael H. M. Pereira, Pedro R. Andrade, Joao Bazzo"
-date: "`r format('15 December 2019')`"
 output: github_document
 abstract: Package `gtfs2gps` has a set of functions to convert public transport GTFS data to GPS-like format using `data.table`. It also has some functions to subset GTFS data in time and space and to convert both representations to simple feature format.
 urlcolor: blue
@@ -10,6 +9,7 @@ vignette: |
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteIndexEntry{colrow: Handling SimU, CR, and LU datas}
 ---
+15 December 2019
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -119,6 +119,7 @@ plot(sf::st_geometry(poa_gps_sf[1:200,]))
 plot(sf::st_geometry(poa_sf), col = "blue", add = TRUE)
 box()
 ```
+
 # Methodological note
 
 For a given trip, the function `gtfs2gps` calculates the average speed between each pair of stops --- given by the ratio between cumulative network distance $S$ and departure time $t$ for a consecutive pair of valid stop_ids ($i$), 
