--- a/intro_to_gtfs2gps.Rmd
+++ b/intro_to_gtfs2gps.Rmd
@@ -75,7 +75,8 @@ plot(sf::st_geometry(sao_small_stops_sf), pch = 20, col = "red", add = TRUE)
 box()
 ```
 
-![](https://github.com/ipeaGIT/gtfs2gps/tree/master/man/figures/sao_small_shapes_sf.jpg)
+![](https://github.com/ipeaGIT/gtfs2gps/blob/master/man/figures/sao_small_shapes_sf.jpg)
+
 
 After subsetting the data, it is also possible to save it as a new GTFS file using `write_gtfs()`, as shown below.
 
@@ -102,7 +103,9 @@ To convert GTFS to GPS-like format, use `gtfs2gps()`. This is the core function 
   box()
 ```
 
-![](https://github.com/ipeaGIT/gtfs2gps/blob/master/man/figures/sao_gps60_sf.jpg)
+```{r echo FALSE}
+knitr::include_graphics("https://github.com/ipeaGIT/gtfs2gps/blob/master/man/figures/sao_gps60_sf.jpg")
+```
 
 The function `gtfs2gps()` automatically recognises whether the GTFS data brings detailed `stop_times.txt` information or whether it is a `frequency.txt` GTFS file. A sample data of a GTFS with detailed  `stop_times.txt` cab be found below:
 
