--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ Respository of the R package to estimate public transport emissions based on GTF
 
 ### Installation
 
-```{r,message=FALSE}
+```{r,message=FALSE,cache.comments=FALSE}
 devtools::install_github("rafapereirabr/gtfs2emis",auth_token = "94c88a642a2f62fce15e4c05cc0b6ead55ff5851")
 ```
 ### Usage
