update vignette for two pollutants

--- a/doc/gtfs2emis-vignette.Rmd
+++ b/doc/gtfs2emis-vignette.Rmd
@@ -29,7 +29,7 @@ poa <- gtfs2gps::gtfs2gps(poa)
 Input data dimensions can be simplified by using line segments (`linestring` geometry type) instead of `points`, since the emissions varies according to distance and speed. 
 
 ```{r}
-poa_gpslines <- gtfs2gps::gps_as_sflinestring(poa)
+poa_gpslines <- gtfs2gps::gps_as_sflinestring(poa) %>% data.table::as.data.table()
 object.size(poa) %>% format("Mb")
 dim(poa)
 object.size(poa_gpslines) %>% format("Mb")
@@ -78,11 +78,11 @@ Pollutants (g/km): CO, NOx, HC, PM, CH4, NMHC, CO2, SO2, Pb, FC ,NO,NO2.
 
 euro_stage = c("II","IV","IV","V","V","V","V","V","V") # euro equivalent for brazilian fleet by years  
 EF_europe <- ef_europe(vel = units::set_units(poa_gpslines$speed,'km/h'),
-                          veh_type = "Urban Buses Standard 15 - 18 t",
-                          tech = "SCR",
-                          euro = euro_stage,
-                          pol = "CO",aggregate = TRUE,
-                          veh = veh_distri)
+                       veh_type = "Urban Buses Standard 15 - 18 t",
+                       tech = "SCR",
+                       euro = euro_stage,
+                       pol = c("CO","PM"),aggregate = TRUE,
+                       veh = veh_distri)
 head(EF_europe)
 ```
 
@@ -91,11 +91,11 @@ head(EF_europe)
 Pollutants (g/km): CO, NOx, Hydrocarbons as TOG (total organic gases), ROG (reactive organic gases), THC, CH4, PM10, PM2.5, SOx, CO2, N2O and CH4.
 
 ```{r}
-EF_emfac <- gtfs2emis::ef_emfac(pol = "CO",calendar_year = "2019",
-                                 model_year = colnames(total_fleet),
-                                 speed = units::set_units(poa_gpslines$speed,'km/h'),
-                                 veh = veh_distri,aggregate = TRUE,fuel = "Diesel")
-head(EF_emfac)
+EF_emfac <- gtfs2emis::ef_emfac(pol = c("CO","PM10"),calendar_year = "2019",
+                                model_year = colnames(total_fleet),
+                                speed = units::set_units(poa_gpslines$speed,'km/h'),
+                                veh = veh_distri,aggregate = TRUE,fuel = "Diesel")
+head(EF_emfac,2)
 ```
 
 #### Brazil emission factors for buses
@@ -106,10 +106,14 @@ Obtained from `vein` package.
 ```{r}
 years <- c("2005","2010","2011","2012","2014","2015","2017","2018")
 
-EF_cetesb <- sapply(seq_along(years),function(i){# i = colnames(total_fleet)[1]
-  vein::ef_cetesb(p = "CO",veh = "BUS_URBAN_D",year = years[i],agemax = 1) * veh_distri[i]
-}) %>% units::set_units("g/km") %>% sum()
-EF_cetesb
+EF_brazil <- lapply(c("CO","PM"),function(j){
+  temp_ef_br <- sapply(seq_along(years),function(i){# i = colnames(total_fleet)[1]
+    vein::ef_cetesb(p = j,veh = "BUS_URBAN_D",year = years[i],agemax = 1) * veh_distri[i]
+  }) %>% units::set_units("g/km") %>% sum()
+  return(temp_ef_br)
+})
+names(EF_brazil) <- paste0(c("CO","PM"),"_avg")
+EF_brazil
 ```
 
 ### 4) Emission 
@@ -120,11 +124,20 @@ Emissions are estimated as a product between distance (units `km`) with emission
 #### Using different emission factors
 
 ```{r}
-data.table::setDT(poa_gpslines)[,emi_usa := units::set_units(poa_gpslines$dist,'km') * EF_emfac$CO_avg ]
+# USA
+emi_usa <- gtfs2emis::emis(veh = 1,dist = units::set_units(poa_gpslines$dist,'km'),ef = EF_emfac)
+unique_names <- paste0("USA_",names(emi_usa))
+poa_gpslines[,(unique_names) := emi_usa]
 
-poa_gpslines[,emi_europe :=  units::set_units(poa_gpslines$dist,'km') * EF_europe$CO_avg]
-# not speed-dependent
-poa_gpslines[,emi_cetesb := units::set_units(poa_gpslines$dist,'km') * EF_cetesb]
+# EUROPE
+emi_europe <- gtfs2emis::emis(veh = 1,dist = units::set_units(poa_gpslines$dist,'km'),ef = EF_europe)
+unique_names <- paste0("Europe_",names(emi_europe))
+poa_gpslines[,(unique_names) := emi_europe]
+
+# BRAZIL (not speed dependent emission factor)
+unique_names <- paste0("Brazil_",names(EF_brazil))
+emi_brazil <- gtfs2emis::emis(veh = 1,dist = units::set_units(poa_gpslines$dist,'km'),ef = EF_brazil)
+poa_gpslines[,(unique_names) := emi_brazil]
 ```
 
 ### 5) Post-processing emissions
@@ -132,7 +145,7 @@ poa_gpslines[,emi_cetesb := units::set_units(poa_gpslines$dist,'km') * EF_cetesb
 
 #### Hour time stamp
 ```{r}
-hour_post <- gtfs2emis::emis_post(emi = poa_gpslines$emi_usa,
+hour_post <- gtfs2emis::emis_post(emi = poa_gpslines$USA_CO_avg,
                                   time = "hour",
                                   time_dt = poa_gpslines$departure_time)
 library(ggplot2)
@@ -142,11 +155,11 @@ ggplot() +
 
 #### Hour-minute time stamp
 ```{r}
-hour_post <- gtfs2emis::emis_post(emi = poa_gpslines$emi_usa,
-                     time = "hour-minute",time_dt = poa_gpslines$departure_time)
-library(ggplot2)
+hour_post <- gtfs2emis::emis_post(emi = poa_gpslines$USA_CO_avg,
+                                  time = "hour-minute",
+                                  time_dt = poa_gpslines$departure_time)
 ggplot() + 
-  geom_bar(data = hour_post,aes(x = time,y = as.numeric(x)),stat = "identity")
+  geom_bar(data = hour_post,aes(x = as.ITime(time),y = as.numeric(x)),stat = "identity")
 ```
 
 #### Spatially
@@ -161,9 +174,9 @@ Intersection operation
 
 ```{r}
 poa_sf <- sf::st_as_sf(poa_gpslines)
-pol_gps <- vein::emis_grid(spobj = poa_sf["emi_usa"],g = grid_gps)
-pol_gps <- pol_gps[as.numeric(pol_gps$emi_usa) > 0,]
-plot(pol_gps["emi_usa"])
+pol_gps <- vein::emis_grid(spobj = poa_sf["USA_CO_avg"],g = grid_gps)
+pol_gps <- pol_gps[as.numeric(pol_gps$USA_CO_avg) > 0,]
+plot(pol_gps["USA_CO_avg"])
 ```
 
 
