--- a/vignettes/gtfs2emis-vignette.Rmd
+++ b/vignettes/gtfs2emis-vignette.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to gtfs2emis"
 author: "Joao Bazzo, Rafael H. M. Pereira, Pedro R. Andrade"
-abstract: Package `gtfs2emis` generates emissions estimates from GTFS data.
+abstract: Package `gtfs2emis` generates emission estimates for public transport networks based on GTFS data.
 output: github_document
 urlcolor: blue
 vignette: |
@@ -9,7 +9,7 @@ vignette: |
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteIndexEntry{gtfs2emis}
   ---
-  02 June 2020
+  24 June 2020
   
 ```{r, include = FALSE}
   knitr::opts_chunk$set(
@@ -19,31 +19,35 @@ vignette: |
 ```
   # Introduction
   
-  Package `gtfs2emis` estimates hot exhaust emissions from GTFS data. This vignette introduces the main functions of the package. It uses the following packages:
+  The package `gtfs2emis` estimates hot exhaust emissions for public transport networks at high spatial and temporal resolutions based on GTFS data. This vignette introduces the main functions of the package. Here are the following packages we will use:
   
 ```{r, message = FALSE}
   library(gtfs2emis)
-  library(vein)
-  library(magrittr)
   library(gtfs2gps)
   library(data.table)
   library(magrittr)
   library(ggplot2)
+  library(vein)
+
 ```
   
   # GTFS data
   
-  To estimate emissions from GTFS data, first it is necessary to compute `speed` and distance (`dist`) for each trip.
-  These information are created when we convert GTFS data to GPS-like
-  records, using `gtfs2gps::gtfs2gps()`. The example below uses GTFS data from Porto Alegre municipality, in Brazil. It processes only one `shape_id` in order to speedup processing time.
+  To estimate emissions from GTFS data, we need first to compute `speed` and distance (`dist`) ofr each trip between pairs of public transport stops/stations.
+  This information is created when we convert GTFS data to GPS-like
+  records, using `gtfs2gps::gtfs2gps()`. The example below uses a sample of the GTFS data from São Paulo municipality, in Brazil. In this example we will only process the trips of one `shape_id` to speedup processing time.
   
 ```{r, message = FALSE}
   # 'poa' to 'spo'
   spo <- gtfs2gps::read_gtfs(system.file("extdata/saopaulo.zip", package = "gtfs2gps")) %>%
   gtfs2gps::filter_by_shape_id("51982")
   spo_gps <- gtfs2gps::gtfs2gps(spo)
+  
+  # the ouput is a data.table, like this
+  head(spo_gps)
+  
 ```
-  The GPS-like data can be converted into line segments (`linestring`). This conversion breaks the trips into several segments, each one between two stops.
+  The GPS-like data can be converted into line segments (`linestring`). This conversion breaks the trips into several segments between consecutive pairs of stops. This will give us a much smaller data set to work on, and allows to capture the spatial-temporal variation of emissions levels. 
   
   
 ```{r}
@@ -51,24 +55,27 @@ spo_gpslines <- gtfs2gps::gps_as_sflinestring(spo_gps) %>% dplyr::select(speed, 
 
 dim(spo_gps)
 dim(spo_gpslines)
+
 ```
 
-We will also update the two relevant attributes to use units of measurement.
+We will also update units of measurement of the attributes in our data.
 
 ```{r}
 spo_gpslines$speed <- units::set_units(spo_gpslines$speed, "km/h")
 spo_gpslines$dist <- units::set_units(spo_gpslines$dist, "km")
+
+# The data shows the average speed and distance between pairs of stops
+head(spo_gpslines)
 ```
 
 # Fleet data
 
-Computing emissions depend on fleet data, which include age and technology.
-There are two types of fleet data to be used for estimating emissions. We call them _regional data_ and _detailed data_.
+To compute emission estimates, we need some basic information on the age and technology of the public transport fleet. The user can input fleet data organized in two different ways. We call them _regional data_ and _detailed data_.
 
-## Regional data
+## Regional fleet data
 
-Data obtained from registry of vehicles in local agencies of transportation generally do not relate a specific route or shape in the GTFS to the respective vehicle category (age and/or technology). 
-In this situation, usually only a distribution of fleet is known. In this case, the vehicles of each shape or route must be given from a probability distribution. Package `gtfs2emis` considers that, on average, all vehicles have the same probability to circulate in each route or shape. We need then to create a `data.table` with the content of the fleet.
+Regional fleet data input is a simple `data.frame` with information on the **relative composition of the fleet in terms of age and technology**. For many cities, this is the only data from registry of vehicles made available by local transport agencies. In this typical situation, there is no information on which vehicles (age and/or technology) are assigned to specific routes in the GTFS. In this case, the package `gtfs2emis` considers that, on average, all vehicles have the same probability to operate on every route of the transport network.
+Here is an example of how a _regional fleed data_ looks like:
 
 
 ```{r}
@@ -76,28 +83,35 @@ total_fleet <- data.table::data.table(year = c(2005,2010,2011,2012,2014,2015,201
                                       bus = c(1,61,50,1,45,18,62,27,31),
                                       veh_type_euro = "Urban Buses Standard 15 - 18 t",
                                       euro_stage = c("II", "IV", "IV", "V", "V", "V", "V", "V","V"))
+
 total_fleet[,fleet_composition := bus/sum(bus)]
+
+# The input data looks like this
+head(total_fleet)
+
 ```
-with probability of distribution based on frequency of `distribution` column.
 
 
-## Detailed data
+## Detailed fleet data
 
-Detailed data is used when the category of the vehicle is known for each route or shape of GTFS. The code below shows an example of specific fleet for each bus route.
+Alternatively, the user can also pass as an input a `data.frame` with detailed data on  which vehicle categories (age/technology) are assigned to each route on the GTFS feed. Here is an example of how this input looks like.
 
 ```{r}
 det_fleet <- data.table::data.table(shape_id = unique(spo$shapes$shape_id),
                                     bus_age = c("2010", "2011", "2012", "2013"),
                                     bus_fuel = "Diesel")
+
+head(det_fleet)
 ```
 
 # Emission factor
 
-Emission factors functions are expressed in `g/km`. They can also be speed-dependent, according to emission factor data source. The avaliable emissions factors available in `gtfs2emis` are from Europe, US, and Brazil.
+Before we estimate emission levels, we need first need to calculate what are the emission factors for each pollutant given our fleet characteristics. For some regions, we can use more rigorous emission factor functions that also account for speed information. The emission factors currently available in `gtfs2emis` are from Europe, US, and Brazil, and they are expressed in `g/km` (see below).
 
-## European emission factors for buses categories
 
-Supported pollutants are (g/km): CO, NOx, HC, PM, CH4, NMHC, CO2, SO2, Pb, FC , NO, and NO2.
+## European emission factors for bus categories
+
+Supported pollutants are: CO, NOx, HC, PM, CH4, NMHC, CO2, SO2, Pb, FC , NO, and NO2. The `ef_europe` function can be used to estimate the emission factors for multiple pollutants considering different types of vehicles and technologies listed in the [EMEP/EEA air pollutant emission inventory guidebook 2019](https://www.eea.europa.eu/themes/air/air-pollution-sources-1/emep-eea-air-pollutant-emission-inventory-guidebook). See documentation for list of options. The function will generate the emission factors for trip segment between consecutive pairs of stops, and it works like this:
 
 ```{r}
 EF_europe <- ef_europe(speed = spo_gpslines$speed,
@@ -128,12 +142,18 @@ Supported pollutants are (g/km): CO, HC, NMHC, CH4, NOx, CO2, RCHO, ETOH, PM, N2
 ```{r}
 # PEDRO: encapsular isto em uma funcao?
 # note que o usuario precisa controlar year e veh_distrib manualmente
-EF_brazil <- ef_brazil(pollutant = c("CO","PM"),veh_type = "BUS_URBAN_D", #veh_type
+EF_brazil <- ef_brazil(pollutant = c("CO","PM"),
+                       veh_type = "BUS_URBAN_D",
                        years = total_fleet$year) # fleet_composition
 head(EF_brazil,2)
 ```
 
 # Emission 
+
+
+
+
+The next step is to combine and route-level information on speed and distances and information on fleet characteristics to
 
 Emissions are estimated as a product between distance (units `km`) with emission factor (units `g/km`).
 
